added delete route but no test yet ooops
